<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/teamInfo_title_teamName"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/team_names"
        android:textSize="@dimen/titleTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/teamInfo_title_win"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/teamInfo_title_lose"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/team_win"
        android:textSize="@dimen/titleTextSize" />

    <TextView
        android:id="@+id/teamInfo_title_lose"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/teamInfo_title_draw"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/team_lose"
        android:textSize="@dimen/titleTextSize" />

    <TextView
        android:id="@+id/teamInfo_title_draw"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/teamInfo_title_total"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/team_draw"
        android:textSize="@dimen/titleTextSize" />

    <TextView
        android:id="@+id/teamInfo_title_total"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/team_total"
        android:textSize="@dimen/titleTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorShadow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>